fix: 소소한 버그 수정